--- a/kmap/src/server/kmap/static/styles/base.css
+++ b/kmap/src/server/kmap/static/styles/base.css
@@ -1,6 +1,8 @@
+html, body{
+    width:100%;
+    height:100%;
+}
 body{
-	background-color: #FBFBEF;
-	background-repeat:no-repeat;
-	
-	
+    background-color: #FBFBEF;
+    background-repeat:no-repeat;
 }
