--- a/kmap/src/server/kmap/templates/kmap/navigate.html
+++ b/kmap/src/server/kmap/templates/kmap/navigate.html
@@ -4,8 +4,11 @@
 <html lang="en">
 <head>
     {%include "kmap/utils/standard_head.html"%}
-    <title></title>
+    <title>Navigate</title>
     <script src="{%static "scripts/navigate.js"%}" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="{%static "styles/reset.css"%}">
+    <link rel="stylesheet" type="text/css" href="{%static "styles/base.css"%}">
+    <link rel="stylesheet" type="text/css" href="{%static "styles/navigate.css"%}">
 </head>
 <body>
     
@@ -13,9 +16,17 @@
         <div id="title">
         <h2>Navigator:</h2>
         </div>
-        
-        <canvas id="viewport" width="800" height="600"></canvas>
-        
+        <div id="user-box">
+            <div id="search-box">
+                <input type="text" id="search-text" placeholder="Search a concept"></input>
+                <button type="button" id="search-button">Search!</button>
+            </div>
+            <div id="searching-box">Searching</div>
+            <div id="error-box">The concept has not been found</div>
+        </div>
+        <div id="canvas-div">
+        <canvas id="viewport" width="800px" height="800px"></canvas>
+        </div>
     </div>
 </body>
 </html>
