--- a/kmap/src/server/kmap/static/styles/base.css
+++ b/kmap/src/server/kmap/static/styles/base.css
@@ -1,8 +1,14 @@
 html, body{
     width:100%;
     height:100%;
+
 }
 body{
     background-color: #FBFBEF;
     background-repeat:no-repeat;
+}
+html, body, h1, h2, h3, h4, h5, p{
+
+    margin:0px;
+    padding:0px;
 }
