--- a/kmap/src/server/kmap/static/styles/navigate.css
+++ b/kmap/src/server/kmap/static/styles/navigate.css
@@ -1,10 +1,18 @@
 #user-box{
     width:40%;
-    height:20%;
+    min-height:100px;
+    max-height:400px;
     position:absolute;
     left:33%;
     top:35%;
-    background-color:#b0c4de;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5) inset;
+    background-color: rgb(70, 70, 70);
+    
+/*     background-color:#b0c4de; */
+    border:0px;
+    border-radius:10px;
+    z-index:200;
+    box-shadow: 5px 5px 5px #888888;
 }
 
 #search-box{
@@ -13,18 +21,31 @@
     margin-top: 3%;
 }
 
+#search-button{
+	margin-top:15px;
+	margin-bottom:15px;
+	margin-left:0px auto;
+	margin-right:0px auto;
+	
+}
+
 #searching-box{
     display:none;
 }
 
 #error-box{
+	color:rgb(255, 255, 255);
+	text-align:center;
     display:none;
+    margin-bottom:10px;
+    width:100%;
 }
 
 #canvas-div{
-    width:70%;
-    height:80%;
+    width:100%;
+    height:100%;
     margin:0px auto;
+    position:relative;
     
 }
 
@@ -33,6 +54,24 @@
 }
 
 h2{
+	margin-top:20px;
     text-align:center;
     font-size:20px;
+}
+
+#title{
+	overflow:hidden;
+	height: 100px;
+	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5) inset;
+    background-color: rgb(51, 51, 51);
+    color:rgb(255, 255, 255);
+	
+}
+
+a, a:visited{
+    color:rgb(255, 255, 255);
+}
+
+a:hover{
+    color:rgb(150, 150, 150);
 }
