--- a/kmap/src/server/kmap/templates/kmap/utils/standard_head.html
+++ b/kmap/src/server/kmap/templates/kmap/utils/standard_head.html
@@ -1,8 +1,12 @@
    {%load static%}     
         
-        <link type="text/css" rel="stylesheet" href=""/>
+        <link type="text/css" rel="stylesheet" href="{%static "styles/base.css"%}"/>
+        <link type="text/css" rel="stylesheet" href="{%static "styles/bootstrap.min.css"%}"/>
+        <link type="text/css" rel="stylesheet" href="{%static "styles/bootstrap-theme.min.css"%}"/>
+        
         <script src="{%static "scripts/jquery.min.js"%}" type="text/javascript"></script>
         <script src="{%static "scripts/arbor.js"%}" type="text/javascript"></script>
         <script src="{%static "scripts/arbor-tween.js"%}" type="text/javascript"></script>
+        <script src="{%static "scripts/bootstrap.min.js"%}" type="text/javascript"></script>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/> 
         
